[gd_scene load_steps=6 format=3 uid="uid://c4468gx7qkibo"]

[ext_resource type="Script" path="res://scripts/tests/EnemyBehaviorTest.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bpges3o80ee2y" path="res://scenes/Enemy.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b4q8h6g7y3dlv" path="res://scenes/Wall.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/Flag.tscn" id="4"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="5"]

[node name="EnemyBehaviorTest" type="Node2D"]
script = ExtResource("1")

[node name="Grid" type="Node2D" parent="." groups=["grid"]]
script = ExtResource("5")

[node name="TestCases" type="Node2D" parent="."]

[node name="DirectPath" type="Node2D" parent="TestCases"]
position = Vector2(100, 100)

[node name="Enemy" parent="TestCases/DirectPath" instance=ExtResource("2")]

[node name="Flag" parent="TestCases/DirectPath" instance=ExtResource("4")]
position = Vector2(300, 0)

[node name="WallChoice" type="Node2D" parent="TestCases"]
position = Vector2(100, 300)

[node name="Enemy" parent="TestCases/WallChoice" instance=ExtResource("2")]

[node name="Wall" parent="TestCases/WallChoice" instance=ExtResource("3")]
position = Vector2(150, 0)

[node name="Flag" parent="TestCases/WallChoice" instance=ExtResource("4")]
position = Vector2(300, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestControls" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 300.0

[node name="RunTestButton" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Run Tests"

[node name="ResetButton" type="Button" parent="UI/TestControls"]
layout_mode = 2
text = "Reset Tests"

[node name="StatusLabel" type="Label" parent="UI/TestControls"]
layout_mode = 2
text = "Click Run Tests to begin..."
autowrap_mode = 3
